- implemented RegionTableCsvParser - implemented Range - added support for floats with € to PriceListCsvParser - added test for RegionTableCsvParser to ParserTest - added postal code lookup example to ParserTest